Bug 71785 - File hangs LibreOffice on Save - SC2012SP1_VMM_CTP2.docx
Summary: File hangs LibreOffice on Save - SC2012SP1_VMM_CTP2.docx
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: LibreOffice (show other bugs)
Version:
(earliest affected)
4.2.0.0.alpha0+ Master
Hardware: x86-64 (AMD64) All
: medium major
Assignee: Yogesh Bharate
URL: https://gerrit.libreoffice.org/#/c/68...
Whiteboard: target:4.3.0 target:4.2.5
Keywords:
: 77710 (view as bug list)
Depends on:
Blocks: DOCX
  Show dependency treegraph
 
Reported: 2013-11-19 13:21 UTC by Yogesh Bharate
Modified: 2017-09-29 11:24 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:
Regression By:


Attachments
While saving the file, it shows the error, hangs the LO. (151.55 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2013-11-19 13:21 UTC, Yogesh Bharate
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Yogesh Bharate 2013-11-19 13:21:17 UTC
Created attachment 89463 [details]
While saving the file, it shows the error, hangs the LO.

Steps to reproduce:
1. Open the file in LibreOffice
2. Click File -> Save As (Microsoft Word 2007/2010 (.docx))

Expected:
1. File should get saved

Actual:
1. LibreOffice hangs on "Repagination" step.
Comment 1 Jean-Baptiste Faure 2013-11-26 15:01:50 UTC
@reporter:
Please, do not set status to NEW a bug you reported yourself.
Are you sure you want propose a patch to fix this problem? If not please, reset "Assigned To:" field to the default value.

That said I reproduce the problem, whatever the format I choose, Microsoft Word 2007/2010 (.docx) or Office Open XML text (.docx) under Ubuntu 13.10 x86-64
I tried to save the file in ODF format (.odt), it worked but the produced file is not perfect. It seems that some pages should be in landscape orientation.

When trying to save back the file to docx format under a new name, I get an error message saying that it not possible to write in the file.

So set the status back to NEW.

Best regards. JBF
Comment 2 retired 2013-12-02 12:10:16 UTC
Also reproducible on OS X 10.9, LO Version: 4.3.0.0.alpha0+
Build ID: a14cfd3d77104aee3e3c3d981a135161295197df
TinderBox: MacOSX-x86@49-TDF, Branch:master, Time: 2013-12-02_04:42:54
Comment 3 Commit Notification 2013-12-13 11:10:08 UTC
YogeshBharate committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=0f6240fa92c443f66441545438821c02b3412486

fdo#71785:  File hangs LibreOffice on Save



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 4 retired 2013-12-13 13:03:52 UTC
Yogesh: Does your commit mean this should be fixed?
Comment 5 Yogesh Bharate 2013-12-13 13:53:54 UTC
Hi Foss ..
Yes.This issue get successfully merged.
https://gerrit.libreoffice.org/#/c/6850/1
Comment 6 surbhi.tongia 2013-12-16 10:11:02 UTC
Verified on Build : libo-master@7E2013-12-15_08.41.01_LibreOfficeDev_4.3.0.0.alpha0_Win_x86.
Now File does not hangs LibreOffice on save and not giving any error while saving.
Comment 7 retired 2013-12-16 10:37:40 UTC
Resolved Fixed as of comment 5.
Comment 8 retired 2013-12-16 10:37:59 UTC
Verified as of Comment 6.
Comment 9 Andras Timar 2014-04-22 17:20:30 UTC
*** Bug 77710 has been marked as a duplicate of this bug. ***
Comment 10 Commit Notification 2014-04-22 17:24:09 UTC
YogeshBharate committed a patch related to this issue.
It has been pushed to "libreoffice-4-2":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=67702f2451f3132c93339c3471228c716c2ba02d&h=libreoffice-4-2

fdo#71785:  File hangs LibreOffice on Save


It will be available in LibreOffice 4.2.5.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 11 Yousuf Philips (jay) (retired) 2014-04-23 06:36:34 UTC
verified working for me on 4.2.5