fdo#71785:  File hangs LibreOffice on Save

Problem Description: While saving the file LO shows the error
"This file could not be save".
The root cause was memory leak.

Conflicts:
	sw/qa/extras/ooxmlexport/ooxmlexport.cxx
Reviewed on:
	https://gerrit.libreoffice.org/6850

Change-Id: Iacc185780c14760056a7d690eb113d4dde1de034